@@ -1,5 +1,10 @@
 config DS_PACKAGE_VIRTUALIP_CGI
-	bool "virtualip-cgi 0.4"
+	bool "virtualip-cgi 0.4.1"
 	default n
 	help
-	    Creates a virtual interface. This is needed to open server ports on the fritz!box itself.
+		Creates a virtual network interface. This is needed to comfortably open
+		server ports on the Fritz!Box itself via AVM web interface.
+
+		The package is also equipped with a configuration interface for the
+		DS-Mod web configurator which lets you choose the IP address and
+		net mask of the virtual interface as well as toggle auto-start.
